# png2c64

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-web.sh
.github/workflows/: release.yml
cmake/: CompilerWarnings.cmake
docs/: index.html
docs/assets/: index--8xQHgo7.js  index-0LEBtsfv.css  index-2i7dfWs_.js  index-334vv9j8.js  index-B10uUe7Y.css  index-B1n0spDA.js  index-B800bB2v.js  index-BLNVy8Ha.js  index-BMn2dtzT.js  index-BOscxH4y.js  index-BVF1z4GX.js  index-BX2UB3j1.js  index-BYmMUxlz.css  index-BiJhlP5h.js  index-Bnk_LRBg.js  index-Bop3LBQc.js  index-Btzisgj9.css  index-C-UKkHQd.js  index-C07mcfU9.js  index-C0SA8Q3F.js  index-C2Pjvy5F.js  index-C44gci25.js  index-CGc25FoN.js  index-CJQ4bU0t.js  index-CRD2Qyrn.js  index-CYFADUOD.js  index-C_YMANJ-.js  index-CccJuUz1.js  index-D-isUJBt.js  index-D48sFYT8.js  index-DFTcu3yb.js  index-DHzG9hMD.js  index-DKWo9Ksa.js  index-DL6tP2OX.css  index-DSw4mbtM.css  index-DU2hvPkY.css  index-DYbtVkuy.js  index-DaWHU_Ay.css  index-DamSJ4QD.js  index-DcENGlHG.css  (+67 more)
examples/: alien-c64.prg  dog-c64.prg  dragon-afli.prg  dragon-c64.prg  dragon-fli.prg  dragon-hires.prg  face-c64.prg  fantasy-c64.prg  game-c64.prg  golden3-c64.prg  head-charset-hi.h  head-charset-hi.prg  head-charset-mc.h  head-charset-mc.prg  head-charset-mixed.h  head-charset-mixed.prg  head-petscii.prg  monster-c64.prg  ship-c64.prg
src/: api.cpp  api.hpp  blur_util.hpp  charset.cpp  charset.hpp  color_space.hpp  displayer_data.hpp  dither.cpp  dither.hpp  log.hpp  main.cpp  palette.hpp  petscii_rom.hpp  png_io.cpp  png_io.hpp  preprocess.cpp  preprocess.hpp  prg.cpp  prg.hpp  quantize.cpp  quantize.hpp  scale.cpp  scale.hpp  types.hpp  version.hpp.in  vic2.hpp  wasm_bindings.cpp
web/: index.html  package-lock.json  package.json  petscii_test.prg  vite.config.js
web/src/: App.vue  main.js
web/src/components/: Converter.vue
web/src/composables/: useImageUpload.js  useWasm.js
web/src/lib/: analytics.js  crt.js  options.js
web/src/workers/: wasm.worker.js
